# MiniGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
models/: cube.ym
shaders/: basic.frag  basic.vert
src/: Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureData.cpp  TextureData.h  Vertex.h  gl.cpp  gl.h  utils.cpp  utils.h
